--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <link rel ="stylesheet" href ="style.css">
-    <title>About John Michael Saldanha</title>
+<!DOCTYPE html><html lang="en"><head>
+    <script src="p5.js"></script>
+    <script src="p5.sound.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <meta charset="utf-8">
+
   </head>
   <body>
-    <h1> John S</h1>
-    <a href="indext.html">Go to second page</a>
-  </body>
-</html>
+    <script src="sketch.js"></script>
+  
+
+</body></html>
